# textedit-u1402963

./: .gitignore  AGENTS.md  README.md  project_spec.md  pyproject.toml
issues/: 00-summary.md  01-must-fix-for-demo.md  02-should-fix.md  03-nice-to-have.md  04-out-of-scope.md  file_tree_handoff.md
src/: main.py
src/editor/: __init__.py  code_editor.py  file_manager.py  file_tree.py  highlighter.py  preferences_dialog.py  settings.py  sidebar.py  undo_commands.py  window.py
src/editor/controllers/: __init__.py  file_controller.py
src/editor/highlighters/: __init__.py  base.py  c_hl.py  cpp_hl.py  detector.py  document_highlighter.py  html_hl.py  java_hl.py  json_hl.py  markdown_hl.py  plain_hl.py  python_hl.py  register_tokenizers.py
src/editor/highlighters/core/: __init__.py  base_tokenizer.py  incremental_manager.py  registry.py  stack_pool.py  style_registry.py  types.py
src/editor/highlighters/tokenizers/: __init__.py  base_tokenizer.py  c_tokenizer.py  cpp_tokenizer.py  html_tokenizer.py  java_tokenizer.py  javascript_tokenizer.py  json_tokenizer.py  markdown_tokenizer.py  plain_tokenizer.py  python_tokenizer.py
src/editor/models/: __init__.py  document.py
tests/: conftest.py  test_code_editor.py  test_editor_io.py  test_file_tree.py  test_help_menu.py  test_highlighter.py  test_preferences.py  test_window.py
tests/highlighters/: test_state_stacking.py
