[project]
name = "fart"
version = "0.2.0"
description = "FART (Fast Async Runtime Text-editor) - A native, cross-platform text editor using PyQt6"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
